@@ -1,6 +1,6 @@
 {
-  "count": 25,
-  "uniques": 6,
+  "count": 30,
+  "uniques": 7,
   "views": [
     {
       "timestamp": "2022-03-20T00:00:00Z",
@@ -26,6 +26,11 @@
       "timestamp": "2022-03-29T00:00:00Z",
       "count": 2,
       "uniques": 2
+    },
+    {
+      "timestamp": "2022-03-30T00:00:00Z",
+      "count": 5,
+      "uniques": 1
     }
   ]
 }
